# chadguide

./: .gitignore  README.md  pyproject.toml
Duffel_api/: README.MD  dashboard.py  run_scanner.py
Duffel_api/core/: api.py  config.py  database.py  parser.py  utils.py
Duffel_api/dashboard/: __init__.py  config.py  types.py
Duffel_api/dashboard/charts/: __init__.py  base.py  map_chart.py  price_charts.py  (+1 more)
Duffel_api/data/: europe_cities.json
Duffel_api/tests/: __init__.py
data/: attraction_names_pl.csv  attractions.json
dijkstra/: alg.py  dijkstra.py  dominance.py  labels.py  load_flights.py  prune.py  reconstruction.py  test.py
geoapify_api/: README.md  client.py  config.py  exceptions.py  geocoding.py  places.py  run_scanner.py
rand/: flights.csv  flights.db  random_flights.py
scripts/: fetch_attraction_images.py  fetch_attractions.py
src/dijkstra/: alg.py  dominance.py  exceptions.py  load_flights.py  prune.py  reconstruction.py  validation.py
src/fastapi/: README.md  flights_api.py
src/flight_router/: README.md  __init__.py
tests/: test_alg.py  test_dominance.py  test_load_flights.py  test_min_stay.py  test_prune.py  test_reconstruction.py  test_validation.py
tests/adapters/: test_adapters.py  test_flight_graph_repo.py
tests/fastapi/: __init__.py  conftest.py  test_flights_api.py
tests/integration/: __init__.py  test_end_to_end.py
tests/performance/: __init__.py  conftest.py  test_bench_algorithm.py  test_bench_cache.py  test_bench_indexing.py
tests/schemas/: test_schemas.py
tests/services/: conftest.py  test_flight_data_expander_service.py  test_route_validation_service.py
web/: index.html  results.html
web/data/: airlines.json
web/js/: airport-index.js  api-client.js  city-selector.js  loading-animation.js
(+56 files in other folders)
