[project]
name = "chadguide"
version = "0.1.0"
description = ""
authors = [
    {name = "Paweł Kauf"},
    {name = "Filip Rabiega"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.52.2,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "pandera (>=0.20.0,<1.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sse-starlette (>=2.0.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "playwright (>=1.57.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
benchmark = [
    "pytest-benchmark>=4.0.0"
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.pytest-benchmark]
# Default benchmark settings
min_rounds = 5
warmup = true
warmup_iterations = 1
